WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257210
Page reload does not take a foreground process assertion
https://bugs.webkit.org/show_bug.cgi?id=257210
Summary
Page reload does not take a foreground process assertion
Ben Nham
Reported
2023-05-23 09:50:33 PDT
On some app resumes where an app does a reload in an offscreen WKWebView, we have seen WebContent initialization take 15+ seconds because it's running at background priority. This is because WebPageProxy::reload doesn't take a foreground process assertion. However, WebPageProxy::loadRequest does take a foreground process assertion by default on iOS (207341). This seems like an oversight that should be fixed.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2023-05-23 09:51:16 PDT
rdar://109407280
Ben Nham
Comment 2
2023-05-23 09:55:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14249
EWS
Comment 3
2023-05-23 15:28:20 PDT
Committed
264443@main
(bce1eb6c24fb): <
https://commits.webkit.org/264443@main
> Reviewed commits have been landed. Closing PR #14249 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug