Page reload does not take a foreground process assertion https://bugs.webkit.org/show_bug.cgi?id=257210 rdar://109407280

Reviewed by Chris Dumez.

On some app resumes where an app does a reload in an offscreen WKWebView, we have seen WebContent
initialization take 15+ seconds because it's running at background priority. This is because
WebPageProxy::reload doesn't take a foreground process assertion. However, WebPageProxy::loadRequest
does take a foreground process assertion by default on iOS (bug 207341). This patch fixes that
inconsistency.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::launchProcessForReload):
(WebKit::WebPageProxy::reload):

Canonical link: https://commits.webkit.org/264443@main